--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/sass/app.scss">
-        <title>Loris Conti</title>
+        <title>Loris Conti - Homepage</title>
     </head>
     <body>
 
@@ -20,6 +20,17 @@
             <nav class="headerNav__nav">
                 <!-- <span class="headerNav__menuBtn">Menu</span> 
                 <div class="headerNav__toggle"></div> -->
+                <ul class="headerNav__list">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Project</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
             </nav>
         </header>
 
