--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
         <main class="home">
             <header class="homeHeader">
                 <div class="homeHeader__inner | ta-c">
-                    <h1 class="homeHeader__title | title title--xl">Loris Conti</h1>
-                    <h2 class="homeHeader__subtitle">Front-End Developer</h2>
+                    <div class="oh">
+                        <h1 class="homeHeader__title | title title--xl">Loris Conti</h1>
+                    </div>
+                    <div class="oh">
+                        <h2 class="homeHeader__subtitle">Front-End Developer</h2>
+                    </div>
                 </div>
             </header>
 
