--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/sass/app.scss">
-        <title>Loris Conti - Homepage</title>
+        <title>Loris Conti</title>
     </head>
     <body>
 
@@ -18,9 +18,11 @@
 
         <header class="headerNav">
             <nav class="headerNav__nav">
-                <!-- <span class="headerNav__menuBtn">Menu</span> 
-                <div class="headerNav__toggle"></div> -->
-                <ul class="headerNav__list">
+                <div class="headerNav__menu | oh | ta-c">
+                    <span class="headerNav__menuBtn | navbtn | fw-bold">Menu</span> 
+                    <span class="headerNav__closeBtn | navbtn | fw-bold">Close</span> 
+                </div>
+                <ul class="headerNav__list | oh">
                     <li>
                         <a href="#">Home</a>
                     </li>
