grid layout added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Portfolio de Loris Conti">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="./assets/img/share-assets/og-share-image.jpg">
         <link rel="stylesheet" href="./assets/sass/app.scss">
         <title>Loris Conti</title>
     </head>
@@ -13,7 +16,6 @@
             <strong class="logo-header">
                 <span class="logo">WEL</span><span class="logo">COME</span>
             </strong>
-
         </div>
 
         <header class="headerNav">
@@ -48,42 +50,53 @@
                 </div>
             </header>
 
-            <section class="homeAbout">
+            <section class="homeAbout | ctn">
                 <div class="homeAbout__inner">
-                    <div class="homeAboutInner__about">
-                        <h2 class="homeAbout__title | title title--l">About</h2>
-                        <p>Hello, I’m Loris and i’m a Belgian Front-End Developer based in Belgium.I’m currentrly working at Reed.be as Front-End Developer.I have a lot of interest for interactivity and technologies like javascript, GLSL and webgl.</p>
+                    <div class="homeAbout__me | dfr">
+                        <h2 class="homeAboutMe__title | title title--l | col-3 | tp-col-4">About</h2>
+                        <p class="col-7 mlg-2 | tp-col-8">Hello, I’m Loris and i’m a Belgian Front-End Developer based in Belgium. I’m currentrly working at reed.be as Front-End Developer. I have a lot of interest for interactivity and technologies like javascript, GLSL and webgl.</p>
                     </div>
-                    <div class="homeAboutInner__about">
-                        <h3 class="homeAboutInner__title">Sofwares</h3>
-                        <ul class="homeAboutInner__list">
-                            <li>Figma</li>
-                            <li>Sketch</li>
-                            <li>Photoshop</li>
-                            <li>Illustrator</li>
-                            <li>Vegas</li>
-                            <li>Premiere</li>
-                        </ul>
+
+                    <div class="homeAbout__soft | dfr">
+                        <h3 class="homeAboutSoft_title | title title--m | col-2 mlg-1">Sofware</h3>
+                        <p class="mlg-3">Hello, I’m Loris and i’m a Belgian Front-End Developer based in Belgium.</p>
                     </div>
-                    <div class="homeAboutInner__about">
-                        <h3 class="homeAboutInner__title">Languages</h3>
-                        <ul class="homeAboutInner__list">
-                            <li>Html</li>
-                            <li>CSS</li>
-                            <li>Scss</li>
-                            <li>Javascript</li>
-                            <li>PHP</li>
-                            <li>VueJS</li>
-                            <li>REACT</li>
-                        </ul>
-                    </div>
+
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, consequatur neque aperiam earum eveniet quae? Explicabo totam quidem obcaecati rem autem, cumque accusantium odio nesciunt dolore quo beatae, eos harum.
+                    Voluptates quod officia voluptatum quidem ullam error voluptas, amet debitis minus perspiciatis mollitia fugiat earum, soluta consectetur quaerat eveniet iste temporibus, incidunt vel non molestias aperiam hic? Commodi, doloribus voluptas!
+                    Dolorum aliquam odit, excepturi beatae, itaque dolorem maiores vero, enim repellendus assumenda sequi quae possimus nam corrupti cumque delectus et molestias molestiae? Consectetur impedit quae molestias optio, eaque obcaecati doloribus.
+                    Nemo qui nesciunt dignissimos rerum hic error odit temporibus minima, vitae omnis id quos commodi molestias et voluptatum dolore culpa alias unde quaerat adipisci expedita enim optio molestiae. Recusandae, nam.</p>
+
+                    <!-- <div class="homeAbout__tech | dfr">
+                        <h3>Language</h3>
+                        <p></p>
+                    </div> -->
+
                 </div>
             </section>
-            <a href="./views/contact.html">contact</a>
+
+            <div class="ctn | test" id="gridWrapper">
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+            </div>
+
+            <!-- <a href="./views/contact.html">contact</a> -->
         </main>
 
-        <footer class="ta-c">
-            <span>Loris Conti - 2022</span>
+        <footer class="ctn">
+            <div class="footer__inner | ta-c">
+                <span>Loris Conti - 2022</span>
+            </div>
         </footer>
 
         <script type="module" src="./assets/js/main.js"></script>
