added nav overlay fix

--- a/index.html
+++ b/index.html
@@ -58,20 +58,50 @@
                     </div>
 
                     <div class="homeAbout__soft | dfr">
-                        <h3 class="homeAboutSoft_title | title title--m | col-2 mlg-1">Sofware</h3>
-                        <p class="mlg-3">Hello, I’m Loris and i’m a Belgian Front-End Developer based in Belgium.</p>
+                        <h3 class="homeAboutSoft_title | title title--m | col-2 mlg-1 | tp-col-3 tp-mlg-1">Sofware</h3>
+                        <ul class="homeAboutSoft_list | mlg-2 | dfr | neue">
+                            <li>Figma</li>
+                            <li>Sketch</li>
+                            <li>AfterEffects</li>
+                            <li>Premiere</li>
+                            <li>Vegas</li>
+                            <li>VSCode</li>
+                        </ul>
                     </div>
 
-                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, consequatur neque aperiam earum eveniet quae? Explicabo totam quidem obcaecati rem autem, cumque accusantium odio nesciunt dolore quo beatae, eos harum.
-                    Voluptates quod officia voluptatum quidem ullam error voluptas, amet debitis minus perspiciatis mollitia fugiat earum, soluta consectetur quaerat eveniet iste temporibus, incidunt vel non molestias aperiam hic? Commodi, doloribus voluptas!
-                    Dolorum aliquam odit, excepturi beatae, itaque dolorem maiores vero, enim repellendus assumenda sequi quae possimus nam corrupti cumque delectus et molestias molestiae? Consectetur impedit quae molestias optio, eaque obcaecati doloribus.
-                    Nemo qui nesciunt dignissimos rerum hic error odit temporibus minima, vitae omnis id quos commodi molestias et voluptatum dolore culpa alias unde quaerat adipisci expedita enim optio molestiae. Recusandae, nam.</p>
+                    <div class="homeAbout__tech | dfr">
+                        <h3 class="homeAboutTech_title | title title--m | col-2 mlg-1 | tp-mlg-1">Language</h3>
+                        <ul class="homeAboutTech_list | mlg-2 | tp-mlg-1 | dfr | neue">
+                            <li>HTML</li>
+                            <li>Css</li>
+                            <li>Sass</li>
+                            <li>Javascript</li>
+                            <li>PHP</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
-                    <!-- <div class="homeAbout__tech | dfr">
-                        <h3>Language</h3>
-                        <p></p>
-                    </div> -->
-
+            <section class="homeProject | ctn">
+                <div class="homeProject__inner">
+                    <h2 class="homeProject__title | title title--l">Projects</h2>
+                    <ul class="homeProject__list | col-10 mlg-1 | dfc | neue">
+                        <li>
+                            <a href="#">Territoire</a>
+                        </li>
+                        <li>
+                            <a href="#">Twitch</a>
+                        </li>
+                        <li>
+                            <a href="#">The Mandalorian</a>
+                        </li>
+                        <li>
+                            <a href="#">Overwatch</a>
+                        </li>
+                        <li>
+                            <a href="#">The witcher</a>
+                        </li>
+                    </ul>
                 </div>
             </section>
 
