--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 </div>
                 <ul class="headerNav__list | oh">
                     <li>
-                        <a href="#">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Project</a>
+                        <a href="./views/projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="./views/contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -45,65 +45,10 @@
                         <h1 class="homeHeader__title | title title--xl">Loris Conti</h1>
                     </div>
                     <div class="oh">
-                        <h2 class="homeHeader__subtitle">Front-End Developer</h2>
+                        <h2 class="homeHeader__subtitle | title title--s">Front-End Developer</h2>
                     </div>
                 </div>
             </header>
-
-            <section class="homeAbout | ctn">
-                <div class="homeAbout__inner">
-                    <div class="homeAbout__me | dfr">
-                        <h2 class="homeAboutMe__title | title title--l | col-3 | tp-col-4">About</h2>
-                        <p class="col-7 mlg-2 | tp-col-8">Hello, I’m Loris and i’m a Belgian Front-End Developer based in Belgium. I’m currentrly working at reed.be as Front-End Developer. I have a lot of interest for interactivity and technologies like javascript, GLSL and webgl.</p>
-                    </div>
-
-                    <div class="homeAbout__soft | dfr">
-                        <h3 class="homeAboutSoft_title | title title--m | col-2 mlg-1 | tp-col-3 tp-mlg-1">Sofware</h3>
-                        <ul class="homeAboutSoft_list | mlg-2 | dfr | neue">
-                            <li>Figma</li>
-                            <li>Sketch</li>
-                            <li>AfterEffects</li>
-                            <li>Premiere</li>
-                            <li>Vegas</li>
-                            <li>VSCode</li>
-                        </ul>
-                    </div>
-
-                    <div class="homeAbout__tech | dfr">
-                        <h3 class="homeAboutTech_title | title title--m | col-2 mlg-1 | tp-mlg-1">Language</h3>
-                        <ul class="homeAboutTech_list | mlg-2 | tp-mlg-1 | dfr | neue">
-                            <li>HTML</li>
-                            <li>Css</li>
-                            <li>Sass</li>
-                            <li>Javascript</li>
-                            <li>PHP</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-
-            <section class="homeProject | ctn">
-                <div class="homeProject__inner">
-                    <h2 class="homeProject__title | title title--l">Projects</h2>
-                    <ul class="homeProject__list | col-10 mlg-1 | dfc | neue">
-                        <li>
-                            <a href="#">Territoire</a>
-                        </li>
-                        <li>
-                            <a href="#">Twitch</a>
-                        </li>
-                        <li>
-                            <a href="#">The Mandalorian</a>
-                        </li>
-                        <li>
-                            <a href="#">Overwatch</a>
-                        </li>
-                        <li>
-                            <a href="#">The witcher</a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
 
             <div class="ctn | test" id="gridWrapper">
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
