--- a/index.html
+++ b/index.html
@@ -50,11 +50,20 @@
                 </div>
             </header>
 
+            <section class="wall | ctn | row">
+                <div class="brick | col-1 | tp-col-2">col-1</div>
+                <div class="brick | col-11 | tp-col-10 | col-free | tp-col-free">col-11</div>
+                <div class="brick | col-2 | tp-col-2">col-2</div>
+                <div class="brick | col-10 | tp-col-10 | col-free | tp-col-free">col-10</div>
+                <div class="brick | col-3 | tp-col-3">col-3</div>
+                <div class="brick | col-9 | tp-col-9 | col-free | tp-col-free">col-9</div>
+            </section>
+
             <div class="ctn | test" id="gridWrapper">
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
-                <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
+                <div class="gridCol | col-1 | tp-col-1 | m-col-1 | m-col-free"></div>
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
                 <div class="gridCol | col-1 | tp-col-1 | m-col-1"></div>
